# wirken-siem

./: .gitignore  .yamllint  LICENSE  README.md
.github/workflows/: ci.yml
datadog/: README.md
datadog/dashboards/: wirken_overview.json
datadog/monitors/: agent_cost_anomaly.json  binary_write.json  budget_exceeded.json  chain_tamper.json  exec_fork_pairing.json  hook_refused.json  mcp_entry_refused.json  shell_outbound_fetch.json  skill_dir_exec.json  tool_output_redacted.json
scripts/: check_splunk_conf.py
sentinel/: README.md
sentinel/rules/: agent_cost_anomaly.yaml  binary_write.yaml  budget_exceeded.yaml  chain_tamper.yaml  exec_fork_pairing.yaml  hook_refused.yaml  mcp_entry_refused.yaml  shell_outbound_fetch.yaml  skill_dir_exec.yaml  tool_output_redacted.yaml
sentinel/workbooks/: wirken_overview.json
splunk/: README.md  eventtypes.conf  macros.conf  savedsearches.conf
webhook/: README.md  consumer.py  pyproject.toml  requirements.txt  rules.py
webhook/tests/: test_rules.py
webhook/tests/fixtures/: assistant_tool_calls.json  audit_legacy_chain_broken.json  hook_dispatched_allow.json  hook_dispatched_deny.json  hook_dispatched_timeout.json  http_fetch.json  mcp_entry_refused.json  tool_output_redacted.json  tool_result.json
